# oakwm

./: .gitignore  .xinitrc  Border.C  Buttons.C  CMakeLists.txt  General.h  Makefile  Manager.C  Manager.h  Rotated.C  Vagrantfile  border.cc  border.hh  client.cc  main.cc  manager.cc  manager.hh  quality.sh  readme.md  roadmap.md  rotated.cc  setup-pinetab.sh  setup.sh
cfg/: default.json  pinetab-v1-arch.json
res/: battery-full.ppm  display.ppm  front.ppm  gear.ppm  icon-config.ppm  icon-menu.ppm  keyboard.ppm  plus.ppm  power.ppm  terminal.ppm  volume-up.ppm  wifi.ppm  wrench.ppm
src/: border.cc  buttons.cc  client.hh  events.cc  general.hh  icon.cc  icon.hh  json.hh  log.hh  main.cc  manager.cc  manager.hh  menu.cc  menu.hh  rotated.cc  settings.hh  toolbar.cc  toolbar.hh  util.hh  version.cc.in  version.hh
